==> stephenzimm/ee459/Adafruit-PN532-master/Adafruit_PN532.cpp <==
 #include "Arduino.h"
 #include "WProgram.h"
#include <Wire.h>
 #define WIRE Wire
 #define WIRE Wire1
#include <SPI.h>
#include "Adafruit_PN532.h"
#define PN532DEBUGPRINT Serial
    #define PN532_SPI_SETTING SPISettings(1000000, LSBFIRST, SPI_MODE0)
    #define PN532_SPI_CLOCKDIV SPI_CLOCK_DIV16
#define PN532_PACKBUFFSIZ 64
    #define _BV(bit) (1<<(bit))

void Adafruit_PN532::begin() {
  if (_usingSPI) {
    // SPI initialization
    if (_hardwareSPI) {
      SPI.begin();

      #ifdef SPI_HAS_TRANSACTION
        SPI.beginTransaction(PN532_SPI_SETTING);
      #else
        SPI.setDataMode(SPI_MODE0);
        SPI.setBitOrder(LSBFIRST);
        SPI.setClockDivider(PN532_SPI_CLOCKDIV);
      #endif
    }
    digitalWrite(_ss, LOW);

    _delay_ms(1000);

    // not exactly sure why but we have to send a dummy command to get synced up
    pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;
    sendCommandCheckAck(pn532_packetbuffer, 1);

    // ignore response!

    digitalWrite(_ss, HIGH);
    #ifdef SPI_HAS_TRANSACTION
      if (_hardwareSPI) SPI.endTransaction();
    #endif
  }
  else {
    // I2C initialization.

    WIRE.begin();
    PORTC |= 1 << PC0;
    _delay_ms(200);
    PORTC &= 0 << PC0;

    // Reset the PN532
    
    // digitalWrite(14, HIGH);
    // digitalWrite(14, LOW);
    // delay(400);
    // digitalWrite(14, HIGH);
    // delay(10);  // Small delay required before taking other actions after reset.
                // See timing diagram on page 209 of the datasheet, section 12.23.
                
    // Modified code for ATmega328p using PB6 pin
    // PORTC |= 1 << PC2; // Write 1 to PB6
    // PORTC &= ~(1 << PC2); // Write 0 to PB6
    // _delay_ms(400); 
    // PORTC |= 1 << PC2; // Write 1 to PB6
    // _delay_ms(10);

    
    PORTD |= 1 << PD4; // Write 1 to PD4
    PORTD &= ~(1 << PD4); // Write 0 to PD4
    _delay_ms(400);
    PORTD |= 1 << PD4; // Write 1 to PD4
    _delay_ms(10);
    

  }
}

bool Adafruit_PN532::sendCommandCheckAck(uint8_t *cmd, uint8_t cmdlen, uint16_t timeout) {
  uint16_t timer = 0;

  // write the command
  writecommand(cmd, cmdlen);

  // Wait for chip to say its ready!
  if (!waitready(timeout)) {
    return false;
  }

  #ifdef PN532DEBUG
    if (!_usingSPI) {
      PN532DEBUGPRINT.println(F("IRQ received"));
    }
  #endif

  // read acknowledgement
  if (!readack()) {
    #ifdef PN532DEBUG
      PN532DEBUGPRINT.println(F("No ACK frame received!"));
    #endif
    return false;
  }

  // For SPI only wait for the chip to be ready again.
  // This is unnecessary with I2C.
  if (_usingSPI) {
    if (!waitready(timeout)) {
      return false;
    }
  }

  return true; // ack'd command
}

void Adafruit_PN532::spi_write(uint8_t c) {
  if (_hardwareSPI) {
    // Hardware SPI write.
    SPI.transfer(c);
  }
  else {
    // Software SPI write.
    int8_t i;
    digitalWrite(_clk, HIGH);

    for (i=0; i<8; i++) {
      digitalWrite(_clk, LOW);
      if (c & _BV(i)) {
        digitalWrite(_mosi, HIGH);
      } else {
        digitalWrite(_mosi, LOW);
      }
      digitalWrite(_clk, HIGH);
    }
  }
}

uint8_t Adafruit_PN532::spi_read(void) {
  int8_t i, x;
  x = 0;

  if (_hardwareSPI) {
    // Hardware SPI read.
    x = SPI.transfer(0x00);
  }
  else {
    // Software SPI read.
    digitalWrite(_clk, HIGH);

    for (i=0; i<8; i++) {
      if (digitalRead(_miso)) {
        x |= _BV(i);
      }
      digitalWrite(_clk, LOW);
      digitalWrite(_clk, HIGH);
    }
  }

  return x;
}
