==> MinhTien/NFC_Door_Lock/Libraries/Adafruit_PN532/Adafruit_PN532.c <==
#include "Adafruit_PN532.h"
#include "global.h"
#include <string.h>
#define PN532_PACKBUFFSIZ 64

void begin(void) {
//   digitalWrite(_ss, LOW);
	chipSellect();
  
  delay_ms(10);

  // not exactly sure why but we have to send a dummy command to get synced up
  pn532_packetbuffer[0] = PN532_COMMAND_GETFIRMWAREVERSION;
  sendCommandCheckAck(pn532_packetbuffer, 1, 100);

  // ignore response!
}

uint8_t sendCommandCheckAck(uint8_t *cmd, uint8_t cmdlen, uint16_t timeout) {
  uint16_t timer = 0;
  
  // write the command
  spiwritecommand(cmd, cmdlen);
  
  // Wait for chip to say its ready!
  while (readspistatus() != PN532_SPI_READY) {
    if (timeout != 0) {
      timer+=10;
      if (timer > timeout)  
        return 0;
    }
    delay_ms(1);
  }
  
  // read acknowledgement
  if (!spi_readack()) {
    return 0;
  }
  
  timer = 0;
  // Wait for chip to say its ready!
  while (readspistatus() != PN532_SPI_READY) {
    if (timeout != 0) {
      timer+=10;
      if (timer > timeout)  
        return 0;
    }
    delay_ms(1);
  }
  
  return 1; // ack'd command
}

void spiwrite(uint8_t c) {
  int8_t i;
//   digitalWrite(_clk, HIGH);
	GPIO_WriteBit(SPI1_SCK_PORT, SPI1_SCK_PIN, (BitAction)1);

  for (i=0; i<8; i++) {
//     digitalWrite(_clk, LOW);
		GPIO_WriteBit(SPI1_SCK_PORT, SPI1_SCK_PIN, (BitAction)0);
    if (c & _BV(i)) {
//       digitalWrite(_mosi, HIGH);
			GPIO_WriteBit(SPI1_MOSI_PORT, SPI1_MOSI_PIN, (BitAction)1);
    } else {
//       digitalWrite(_mosi, LOW);
			GPIO_WriteBit(SPI1_MOSI_PORT, SPI1_MOSI_PIN, (BitAction)0);
    }    
//     digitalWrite(_clk, HIGH);
		GPIO_WriteBit(SPI1_SCK_PORT, SPI1_SCK_PIN, (BitAction)1);
  }
}

uint8_t spiread(void) {
  int8_t i, x;
  x = 0;
//   digitalWrite(_clk, HIGH);
	GPIO_WriteBit(SPI1_SCK_PORT, SPI1_SCK_PIN, (BitAction)1);

  for (i=0; i<8; i++) {
    if (GPIO_ReadInputDataBit(SPI1_MISO_PORT, SPI1_MISO_PIN)) {
      x |= _BV(i);
    }
//     digitalWrite(_clk, LOW);
		GPIO_WriteBit(SPI1_SCK_PORT, SPI1_SCK_PIN, (BitAction)0);
//     digitalWrite(_clk, HIGH);
		GPIO_WriteBit(SPI1_SCK_PORT, SPI1_SCK_PIN, (BitAction)1);
  }
  return x;
}
